Simple matblazor UI

--- a/src/CatalogUI/_Imports.razor
+++ b/src/CatalogUI/_Imports.razor
@@ -6,4 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using CatalogUI
-@using CatalogUI.Shared
+@using CatalogUI.Shared.Layouts
+@using CatalogUI.Shared.Components
+
+@using MatBlazor
