--- a/src/CatalogUI/Pages/_Host.cshtml
+++ b/src/CatalogUI/Pages/_Host.cshtml
@@ -12,8 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CatalogUI</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -32,5 +34,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
 </html>
