--- a/src/AdminUI/Pages/Type.razor
+++ b/src/AdminUI/Pages/Type.razor
@@ -1,27 +1,29 @@
 ﻿@page "/type"
-@*@inject CatalogAPI.Domain.Interfaces.ICatalogService CatalogService*@
+@using CatalogAPI.Infrastructure.Services
+@using CatalogAPI.Domain.Models
+@inject CatalogAPI.Domain.Interfaces.ICatalogService CatalogService
 @inject NavigationManager NavigationManager
 
 <h3>Type</h3>
-<EditForm Model="@type" OnValidSubmit="HandleRegisrtion">
-    <DataAnnotationsValidator />
+<EditForm Model="@type" OnValidSubmit="HandleRegistration">
+
     <div class="form-group">
         <label for="type">Menu Naam</label>
         <InputText id="type" @bind-Value="type.Type" class="form-control" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Opslaan</button>
-    <ValidationSummary />
+    <button type="submit" class="btn btn-primary" >Submit</button>
 </EditForm>
 
 
 @code {
-    CatalogAPI.Domain.Models.CatalogType type = new CatalogAPI.Domain.Models.CatalogType();
+    private CatalogType type = new CatalogType();
 
-    void HandleRegisrtion()
+    private async Task HandleRegistration()
     {
-        Console.WriteLine($"{type.Type}");
-       // NavigationManager.NavigateTo("");
+        await CatalogService.CreateTypeAsync(type);
+        NavigationManager.NavigateTo("");
     }
+
 }
 
