--- a/src/AdminUI/Pages/_Host.cshtml
+++ b/src/AdminUI/Pages/_Host.cshtml
@@ -31,6 +31,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.server.js"></script>
+<script src="_framework/blazor.server.js"></script>
+<script src="_content/Blazor.Extensions.Logging/blazor.extensions.logging.js" defer></script>
 </body>
 </html>
