--- a/src/AdminUI/Pages/Type.razor
+++ b/src/AdminUI/Pages/Type.razor
@@ -1,20 +1,19 @@
 ﻿@page "/type"
-@using CatalogAPI.Infrastructure.Services
-@using CatalogAPI.Domain.Models
+
 @inject CatalogAPI.Domain.Interfaces.ICatalogService CatalogService
 @inject NavigationManager NavigationManager
 
 <h3>Type</h3>
-<EditForm Model="@type" OnValidSubmit="HandleRegistration">
+
+<EditForm Model="@type" OnValidSubmit="HandleRegisrtion">
 
     <div class="form-group">
         <label for="type">Menu Naam</label>
         <InputText id="type" @bind-Value="type.Type" class="form-control" />
     </div>
-
+  
     <button type="submit" class="btn btn-primary" >Submit</button>
 </EditForm>
-
 
 @code {
     private CatalogType type = new CatalogType();
@@ -24,6 +23,4 @@
         await CatalogService.CreateTypeAsync(type);
         NavigationManager.NavigateTo("");
     }
-
 }
-
