--- a/src/AdminUI/Pages/Item.razor
+++ b/src/AdminUI/Pages/Item.razor
@@ -44,9 +44,9 @@
         NavigationManager.NavigateTo("");
     }
 
-    //private async Task UpdateItem()
-    //{
-    //    await _CatalogService.UpdateItem(item);
-    //    NavigationManager.NavigateTo("");
-    //}
+    private async Task UpdateItem()
+    {
+        await _CatalogService.UpdateItem(item);
+        NavigationManager.NavigateTo("");
+    }
 }
