--- a/src/AdminUI/Pages/Type.razor
+++ b/src/AdminUI/Pages/Type.razor
@@ -1,11 +1,13 @@
 ﻿@page "/type"
 
+@using CatalogAPI.Domain.Models
+
 @inject CatalogAPI.Domain.Interfaces.ICatalogService CatalogService
 @inject NavigationManager NavigationManager
 
 <h3>Type</h3>
 
-<EditForm Model="@type" OnValidSubmit="HandleRegisrtion">
+<EditForm Model="@type" OnValidSubmit="HandleRegistration">
 
     <div class="form-group">
         <label for="type">Menu Naam</label>
