--- a/src/AdminUI/Pages/Index.razor
+++ b/src/AdminUI/Pages/Index.razor
@@ -10,7 +10,7 @@
     <div>
         <ul>
             <h3>@type.Type</h3>
-            <button class="btn btn-info" @onclick="DeleteType"> Delete</button>
+            <button class="btn btn-danger" @onclick="(() => DeleteType(type.Id))"> Delete</button>
             <button class="btn btn-info" @onclick="UpdateType">Update</button>
             <br />
             <br />
@@ -33,8 +33,8 @@
 }
 
 @code {
-    CatalogType type = new CatalogAPI.Domain.Models.CatalogType();
-    CatalogItem item = new CatalogAPI.Domain.Models.CatalogItem();
+    CatalogType type = new CatalogType();
+    CatalogItem item = new CatalogItem();
 
     private IEnumerable<CatalogType> catalogTypes;
     private IEnumerable<CatalogItem> catalogItems;
@@ -44,18 +44,22 @@
         catalogTypes = await CatalogService.GetAllTypeAsync();
         catalogItems = await CatalogService.GetAllItemsAsync();
     }
-      
+
     private async Task UpdateType()
     {
-        //await CatalogService.UpdateType();
-        NavigationManager.NavigateTo("/type");
+        NavigationManager.NavigateTo("/update");
+
     }
 
-    private async Task DeleteType()
+    private async Task DeleteType(int TypeId)
     {
-        //await CatalogService.DeleteTypeById();
+
+        //int id = type.Id;
+        //CatalogType typeid = await CatalogService.GetTypeByIdAsync(id);
+        await CatalogService.DeleteTypeById(TypeId);
+        NavigationManager.NavigateTo("");
     }
-      
+
     private void UpdateItem()
     {
         NavigationManager.NavigateTo("/item");
@@ -66,8 +70,4 @@
         await CatalogService.DeleteItemById(item.Id);
         NavigationManager.NavigateTo("");
     }
-
-
-
 }
-
