--- a/src/AdminUiWasm/Pages/Index.razor
+++ b/src/AdminUiWasm/Pages/Index.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Burger Queen!</h1>
 
-Welcome to your new app.
+<p>Here you can taste different burgers, snacks, dessert, ... .</p>
+<p>You can also drink all kinds of drinks, hot or cold.</p>
+<p>Whatever you like most, we have it!</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+<button></button>
