--- a/src/AdminUiWasm/Shared/NavMenu.razor
+++ b/src/AdminUiWasm/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3" >
+            <NavLink class="nav-link" href="CreateTypeItem">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Create type & item
+            </NavLink>
+        </li>
     </ul>
 </div>
 
