--- a/src/AdminUiWasm/Pages/CreateTypeItem.razor
+++ b/src/AdminUiWasm/Pages/CreateTypeItem.razor
@@ -1,13 +1,16 @@
 ﻿@page "/CreateTypeItem"
 
+@using AdminUiWasm.CatalogApi
+
 @inject HttpClient Http
 @inject CatalogApi.catalog_apiClient client
 
 @inject NavigationManager NavigationManager
 
-<h3>Create type</h3><br/>
+<h3>Create type</h3>
+<br />
 
-<EditForm Model="@type" OnInvalidSubmit="CreateType">
+<EditForm Model="@type" OnValidSubmit="CreateNavigation">
     <div class="form-group">
         <label for="type">Name</label>
         <InputText id="type" @bind-Value="type.Type" class="form-control" />
@@ -15,12 +18,13 @@
 
     <button type="submit" class="btn btn-primary" @onclick="CreateType">Create type</button>
 </EditForm>
-<br/>
+<br />
 
 
-<h3>Create item</h3><br/>
+<h3>Create item</h3>
+<br />
 
-<EditForm Model="@item" OnInvalidSubmit="CreateItem">
+<EditForm Model="@item" OnValidSubmit="CreateNavigation">
     <div class="form-group">
         <label for="productName">Product Name</label>
         <InputText id="productName" @bind-Value="item.Name" class="form-control" />
@@ -47,18 +51,24 @@
 
 @code {
 
-    CatalogApi.CatalogType type = new CatalogApi.CatalogType();
-    CatalogApi.CatalogItem item = new CatalogApi.CatalogItem();
+    CatalogType type = new CatalogType();
+    CatalogItem item = new CatalogItem();
+
+    private IEnumerable<CatalogItem> catalogItems;
+    private IEnumerable<CatalogType> catalogtypes;
 
     private async Task CreateType()
     {
         await client.CreateCatalogTypeAsync(type);
-        NavigationManager.NavigateTo("");
     }
 
     private async Task CreateItem()
     {
         await client.CreateCatalogItemAsync(item);
+    }
+
+    private void CreateNavigation()
+    {
         NavigationManager.NavigateTo("");
     }
 }
