--- a/src/AdminUiWasm/Pages/UpdateItem.razor
+++ b/src/AdminUiWasm/Pages/UpdateItem.razor
@@ -1,4 +1,6 @@
-﻿@page "/UpdateItem"
+﻿@page "/UpdateItem/{Id}"
+
+@using AdminUiWasm.CatalogApi
 
 @inject HttpClient Http
 @inject CatalogApi.catalog_apiClient client
@@ -7,7 +9,12 @@
 
 <h3>Update Item</h3>
 
-<EditForm Model="@item" OnInvalidSubmit="ItemUpdate">
+<EditForm Model="@item" OnValidSubmit="ItemUpdate">
+
+    <div class="form-group">
+        <label for="itemId">Item Id</label>
+        <InputText id="itemId" @bind-Value="@Id" class="form-control" />
+    </div>
 
     <div class="form-group">
         <label for="productName">Product Name</label>
@@ -35,7 +42,15 @@
 
 @code {
 
-    CatalogApi.CatalogItem item;
+    CatalogItem item = new CatalogItem();
+
+    [Parameter]
+    public string Id { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        //item = await client.GetCatalogTypeByIdAsync(Id);
+    }
 
     private async Task ItemUpdate()
     {
