--- a/src/AdminUiWasm/Pages/UpdateType.razor
+++ b/src/AdminUiWasm/Pages/UpdateType.razor
@@ -1,34 +1,47 @@
-﻿@page "/UpdateType" 
+﻿@page "/UpdateType/{id}"
+@using AdminUiWasm.CatalogApi
 
 @inject HttpClient Http
-@inject CatalogApi.catalog_apiClient client
+@inject catalog_apiClient client
 
 @inject NavigationManager NavigationManager
 
 <h3>Update Type</h3>
 
-<EditForm Model="@type" OnInvalidSubmit="TypeUpdate">
+<EditForm Model="@type" OnValidSubmit="TypeUpdate">
 
-    <div class="form-group">
-        <label for="typeId">Type id</label>
-        <InputNumber id="typeId" @bind-Value="type.Id" class="form-control" />
-    </div>
+	<div class="form-group">
+		<label for="typeId">Type id</label>
+		<InputText id="typeId" @bind-Value="@Id" class="form-control" />
+		@*<label>@Id</label>*@
+	</div>
 
-    <div class="form-group">
-        <label for="type">Menu Naam</label>
-        <InputText id="type" @bind-Value="type.Type" class="form-control" />
-    </div>
+	<div class="form-group">
+		<label for="type">Menu Naam</label>
+		<InputText id="type" @bind-Value="@type.Type" class="form-control" />
+	</div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+	<button type="submit" class="btn btn-primary">Submit</button>
 
 </EditForm>
 
 @code {
-    CatalogApi.CatalogType type;
+	private CatalogType type = new CatalogType();
 
-    private async Task TypeUpdate()
-    {
-        await client.UpdateCatalogTypeAsync(type);
-        NavigationManager.NavigateTo("");
-    }
+	[Parameter]
+	public string Id { get; set; }
+
+	protected override async Task OnInitializedAsync()
+	{
+		Id = Id ?? "0";
+		CatalogType Type = await client.GetCatalogTypeByIdAsync(Convert.ToInt32(Id));
+		type.Type = Type.Type;
+	}
+
+	private async Task TypeUpdate()
+	{
+		type.Id = Convert.ToInt32(Id);
+		await client.UpdateCatalogTypeAsync(type);
+		NavigationManager.NavigateTo("/fetchdata");
+	}
 }
