--- a/src/AdminUiWasm/Pages/UpdateItem.razor
+++ b/src/AdminUiWasm/Pages/UpdateItem.razor
@@ -1,4 +1,5 @@
 ﻿@page "/UpdateItem/{id}"
+
 @using AdminUiWasm.CatalogApi
 
 @inject HttpClient Http
@@ -8,7 +9,12 @@
 
 <h3>Update Item</h3>
 
-<EditForm Model="@item" OnInvalidSubmit="ItemUpdate">
+<EditForm Model="@item" OnValidSubmit="ItemUpdate">
+
+    <div class="form-group">
+        <label for="itemId">Item Id</label>
+        <InputText id="itemId" @bind-Value="@Id" class="form-control" />
+    </div>
 
     <div class="form-group">
         <label for="productName">Product Name</label>
@@ -35,7 +41,6 @@
 </EditForm>
 
 @code {
-
 	CatalogItem item = new CatalogItem();
 
 	[Parameter]
@@ -58,3 +63,4 @@
 		NavigationManager.NavigateTo("/fetchdata");
 	}
 }
+
