--- a/src/AdminUiWasm/Pages/FetchData.razor
+++ b/src/AdminUiWasm/Pages/FetchData.razor
@@ -93,7 +93,7 @@ else
 
     private void CreateType()
     {
-        NavigationManager.NavigateTo("/CreateTypeItem");
+        NavigationManager.NavigateTo("/CreateType");
     }
 
 	  private async Task UpdateType(int id)
@@ -110,7 +110,7 @@ else
 
     private void CreateItem()
     {
-        NavigationManager.NavigateTo("/CreateTypeItem");
+        NavigationManager.NavigateTo("/CreateItem");
     }
       
 	  private async Task UpdateItem(int id)
